# python-project-52

./: .coverage  .env  .gitignore  Dockerfile  Makefile  Procfile  README.md  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
fixtures/: labeldata.json  statusdata.json  taskdata.json  userdata.json
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/ru_RU/LC_MESSAGES/: django.mo  django.po
task_manager/: rollbar_middleware.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/mixins/: mixins.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_description_and_more.py  0004_alter_task_executor.py
task_manager/templates/: base.html  footer.html  index.html  layout.html  login.html  navigation.html
task_manager/templates/apps/: apps_confirm_delete.html  apps_form.html
task_manager/templates/labels/: index.html  label_create.html  label_delete.html  label_update.html  labels_list.html
task_manager/templates/statuses/: index.html  status_create.html  status_delete.html  status_update.html  statuses.html  statuses_list.html
task_manager/templates/tasks/: index.html  task_create.html  task_delete.html  task_single.html  task_update.html  tasks_detail.html  tasks_list.html
task_manager/templates/users/: index.html  registration.html  user_create.html  user_delete.html  user_update.html  users_confirm_delete.html  users_form.html  users_list.html
task_manager/test_mixins/: mixin_for_form_test.py
task_manager/tests/: tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
test_mixins/: mixin_for_crud_tests.py
