[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dimon0476 <dmitry.fodorov@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "2.1.0"
python-dotenv = "^1.0.0"
whitenoise = "^6.2.0"
requests = "^2.31.0"
gunicorn = "^20.1.0"
Django = "^4.2.7"
django-bootstrap4 = "^22.3"
rollbar = "^0.16.3"
psycopg2-binary = "^2.8.6"
django-filter = "^23.4"

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
