[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tonyshh <shalin.anton8@gmail.com>"]
readme = "README.md"

packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"
django-admin = "^2.0.2"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
django-bootstrap4 = "^23.1"
django-crispy-forms = "^2.0"
django-filter = "^23.2"
rollbar = "^0.16.3"
django-extensions = "^3.2.3"
django-cors-headers = "^4.2.0"
whitenoise = "^6.2.0"
django-bootstrap-v5 = "^1.0.11"
crispy-bootstrap4 = "^2022.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pytest-django = "^4.5.2"
flake8 = "^5.0.4"
coverage = "^7.3.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
